--- a/app/src/main/res/layout/dialog_add_exercise.xml
+++ b/app/src/main/res/layout/dialog_add_exercise.xml
@@ -11,6 +11,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/tv_heading"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/spacing_normal"
