--- a/app/src/main/res/layout/viewpager2_item_exercise_by_day.xml
+++ b/app/src/main/res/layout/viewpager2_item_exercise_by_day.xml
@@ -8,7 +8,7 @@
 
     </data>
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -16,13 +16,19 @@
         <TextView
             android:id="@+id/tv_day_name"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight=".08"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/spacing_normal"
+            android:layout_marginTop="@dimen/spacing_normal"
+            android:layout_marginEnd="@dimen/spacing_normal"
             android:gravity="center"
             android:padding="@dimen/spacing_small"
             android:textAlignment="center"
             android:textAppearance="?attr/textAppearanceHeadline5"
             android:textColor="@android:color/black"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             tools:text="MONDAY" />
 
         <androidx.recyclerview.widget.RecyclerView
@@ -30,23 +36,30 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="@dimen/spacing_small"
-            android:layout_weight=".84"
             android:clipToPadding="false"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:itemCount="6"
+            app:layout_constraintBottom_toTopOf="@+id/btn_add_exercise"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_day_name"
+            tools:itemCount="1"
             tools:listitem="@layout/recyclervire_item_exercise_by_day" />
-
-        <include layout="@layout/horizontal_divider" />
 
         <Button
             android:id="@+id/btn_add_exercise"
             style="?attr/materialButtonOutlinedStyle"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_margin="@dimen/spacing_normal"
-            android:layout_weight=".08"
-            android:text="@string/add_exercise" />
+            android:layout_marginStart="@dimen/spacing_normal"
+            android:layout_marginEnd="@dimen/spacing_normal"
+            android:text="@string/add_exercise"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent" />
 
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
