--- a/app/src/main/res/layout/dialog_add_exercise.xml
+++ b/app/src/main/res/layout/dialog_add_exercise.xml
@@ -72,6 +72,7 @@
                 android:id="@+id/btn_cancel"
                 style="?attr/materialButtonOutlinedStyle"
                 android:layout_width="0dp"
+                android:textColor="@color/secondaryColor"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/spacing_normal"
                 android:layout_weight=".5"
@@ -79,6 +80,7 @@
 
             <Button
                 android:id="@+id/btn_submit"
+                android:textColor="@color/secondaryColor"
                 style="?attr/materialButtonOutlinedStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
