--- a/app/src/main/res/layout/recyclervire_item_exercise_by_day.xml
+++ b/app/src/main/res/layout/recyclervire_item_exercise_by_day.xml
@@ -104,6 +104,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight=".2"
+                    android:textColor="@color/secondaryColor"
                     android:text="@string/edit_sets_reps" />
             </LinearLayout>
         </LinearLayout>
