--- a/app/src/main/res/layout/recylerview_item_card_filter_type.xml
+++ b/app/src/main/res/layout/recylerview_item_card_filter_type.xml
@@ -52,6 +52,7 @@
             <Button
                 android:id="@+id/btn_clear_filters"
                 style="?attr/borderlessButtonStyle"
+                android:textColor="@color/secondaryColor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/spacing_normal"
