--- a/app/src/main/res/layout/viewpager2_item_exercise_by_day.xml
+++ b/app/src/main/res/layout/viewpager2_item_exercise_by_day.xml
@@ -54,6 +54,7 @@
             android:layout_margin="@dimen/spacing_normal"
             android:layout_marginStart="@dimen/spacing_normal"
             android:layout_marginEnd="@dimen/spacing_normal"
+            android:textColor="@color/secondaryColor"
             android:text="@string/add_exercise"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
