--- a/app/src/main/res/navigation/dashboard_nav_graph.xml
+++ b/app/src/main/res/navigation/dashboard_nav_graph.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/dashboard_nav_graph"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/dashboard_nav_graph"
     app:startDestination="@id/mainDashboardFragment">
 
     <fragment
@@ -37,4 +39,9 @@
         android:id="@+id/heightGraphFragment"
         android:name="com.hardiksachan.fitbuddy.dashboard.HeightGraphFragment"
         android:label="Height" />
+    <fragment
+        android:id="@+id/aboutFragment"
+        android:name="com.hardiksachan.fitbuddy.dashboard.AboutFragment"
+        android:label="@string/about"
+        tools:layout="@layout/fragment_about" />
 </navigation>
