--- a/app/src/main/res/menu/navdrawer_menu.xml
+++ b/app/src/main/res/menu/navdrawer_menu.xml
@@ -9,6 +9,9 @@
         <item
             android:id="@+id/exerciseByDayFragment"
             android:title="@string/workout_manager" />
+        <item
+            android:id="@+id/sleepTrackerFragment"
+            android:title="@string/sleep_tracker" />
     </group>
 
     <group>
