--- a/app/src/main/res/navigation/dashboard_nav_graph.xml
+++ b/app/src/main/res/navigation/dashboard_nav_graph.xml
@@ -18,6 +18,9 @@
         <action
             android:id="@+id/action_mainDashboardFragment_to_heightGraphFragment"
             app:destination="@id/heightGraphFragment" />
+        <action
+            android:id="@+id/action_mainDashboardFragment_to_sleepTrackerFragment"
+            app:destination="@id/sleepTrackerFragment" />
     </fragment>
     <fragment
         android:id="@+id/exerciseByDayFragment"
@@ -44,4 +47,20 @@
         android:name="com.hardiksachan.fitbuddy.dashboard.AboutFragment"
         android:label="@string/about"
         tools:layout="@layout/fragment_about" />
+    <fragment
+        android:id="@+id/sleepTrackerFragment"
+        android:name="com.hardiksachan.fitbuddy.sleep.SleepTrackerFragment"
+        android:label="Sleep Tracker">
+        <action
+            android:id="@+id/action_sleepTrackerFragment_to_sleepQualityFragment"
+            app:destination="@id/sleepQualityFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/sleepQualityFragment"
+        android:name="com.hardiksachan.fitbuddy.sleep.SleepQualityFragment"
+        android:label="Sleep Tracker">
+        <action
+            android:id="@+id/action_sleepQualityFragment_to_sleepTrackerFragment"
+            app:destination="@id/sleepTrackerFragment" />
+    </fragment>
 </navigation>
