--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,8 @@
     <dimen name="spacing_extra_large">32dp</dimen>
     <dimen name="chip_radius_tiny">2dp</dimen>
     <dimen name="dots_indicator_size">5dp</dimen>
+    <dimen name="margin">16dp</dimen>
+    <dimen name="icon_size">64dp</dimen>
+    <dimen name="title_text_size">20sp</dimen>
+    <dimen name="triple_margin">48dp</dimen>
 </resources>
