--- a/app/src/main/res/navigation/dashboard_nav_graph.xml
+++ b/app/src/main/res/navigation/dashboard_nav_graph.xml
@@ -61,6 +61,8 @@
         android:label="Sleep Tracker">
         <action
             android:id="@+id/action_sleepQualityFragment_to_sleepTrackerFragment"
-            app:destination="@id/sleepTrackerFragment" />
+            app:destination="@id/sleepTrackerFragment"
+            app:popUpTo="@id/sleepTrackerFragment"
+            app:popUpToInclusive="true" />
     </fragment>
 </navigation>
