Added landscape variations and nav header

--- a/app/src/main/res/layout/fragment_main_dashboard.xml
+++ b/app/src/main/res/layout/fragment_main_dashboard.xml
@@ -86,6 +86,15 @@
                             android:text="Male"
                             android:textAlignment="textStart"
                             android:textSize="24sp" />
+
+                        <TextView
+                            android:layout_marginTop="@dimen/spacing_small"
+                            android:id="@+id/tv_user_bmi"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/bmi_normal"
+                            android:textAlignment="center"
+                            android:textSize="18sp" />
                     </LinearLayout>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -311,7 +320,8 @@
                             android:layout_width="96dp"
                             android:layout_height="96dp"
                             android:layout_gravity="center"
-                            app:srcCompat="@drawable/ic_sleep_active" />
+                            app:srcCompat="@drawable/ic_hotel_white_18dp"
+                            app:tint="@color/primaryColor" />
 
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
