--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -27,6 +27,7 @@
             app:itemBackground="@android:color/transparent"
             app:itemIconTint="@color/drawer_item"
             app:itemTextColor="@color/drawer_item"
+            app:headerLayout="@layout/nav_header"
             app:itemTextAppearance="?attr/textAppearanceBody1"
             app:menu="@menu/navdrawer_menu" />
 
