--- a/app/src/main/res/menu/navdrawer_menu.xml
+++ b/app/src/main/res/menu/navdrawer_menu.xml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:checkableBehavior="single">
+    <group android:id="@+id/menu_grp_main" android:checkableBehavior="single">
         <item
             android:id="@+id/mainDashboardFragment"
             android:checked="true"
+            android:icon="@drawable/ic_dashboard_white_18dp"
             android:title="@string/dashboard" />
         <item
             android:id="@+id/exerciseByDayFragment"
+            android:icon="@drawable/ic_fitness_center_white_18dp"
             android:title="@string/workout_manager" />
         <item
             android:id="@+id/sleepTrackerFragment"
+            android:icon="@drawable/ic_hotel_white_18dp"
             android:title="@string/sleep_tracker" />
     </group>
 
-    <group>
+    <group android:id="@+id/menu_grp_about">
         <item
             android:id="@+id/aboutFragment"
+            android:icon="@drawable/ic_info_white_24dp"
             android:title="@string/about" />
     </group>
 </menu>
