--- a/app/src/main/res/layout-land/fragment_main_dashboard.xml
+++ b/app/src/main/res/layout-land/fragment_main_dashboard.xml
@@ -72,7 +72,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="John Doe"
-                                android:textAlignment="textStart"
+                                android:textAlignment="center"
                                 android:textAppearance="?attr/textAppearanceHeadline5"
                                 android:textStyle="bold" />
 
@@ -81,7 +81,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="27 yrs"
-                                android:textAlignment="textStart"
+                                android:textAlignment="center"
                                 android:textSize="24sp" />
 
                             <TextView
@@ -89,7 +89,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Male"
-                                android:textAlignment="textStart"
+                                android:textAlignment="center"
                                 android:textSize="24sp" />
 
                             <TextView
