--- a/app/src/main/res/layout/fragment_main_dashboard.xml
+++ b/app/src/main/res/layout/fragment_main_dashboard.xml
@@ -67,7 +67,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="John Doe"
-                            android:textAlignment="textStart"
+                            android:textAlignment="center"
                             android:textAppearance="?attr/textAppearanceHeadline5"
                             android:textStyle="bold" />
 
@@ -76,7 +76,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="27 yrs"
-                            android:textAlignment="textStart"
+                            android:textAlignment="center"
                             android:textSize="24sp" />
 
                         <TextView
@@ -84,7 +84,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Male"
-                            android:textAlignment="textStart"
+                            android:textAlignment="center"
                             android:textSize="24sp" />
 
                         <TextView
